ECL 9.6.2:
==========

* Visible changes:

 - Reimplemented winsock streams using the new file structures (D. Statyvka)

* Bugs:

 - Fixed a bug in the compiler that prevented building with MSVC

 - Fixed a bug in src/clx/dependent.lisp that prevented compiling CLX.

 - si:unbound is now a self-referential constant (symbol-value 'si:unbound)
   = si:unbound

 - si:bds-value returns si:unbound when finding a binding for a
   previously unbound variable.

 - The command :bds no longer chokes when finding unbound special variables.

* Numerics:

 - EXT:OUTPUT-FLOAT-NAN and EXT:OUTPUT-FLOAT-INFINITY can be redefined to
   customized how NaNs and infinities are output.

 - RATIONAL and FLOAT work more accurately with long-floats.

 - IMAGPART returns (* 0 x) when the argument X is a real. This follows the
   ANSI specification, but has the (wrong?) side effect that the imaginary
   part of -0.0 is -0.0, not 0.

 - Three new C constants {single,double,long}float_minus_zero in cl_core
   save memory when creating zeros.

 - The constants in cl_core are now used in compiled code.

 - (MINUSP -0.0) => NIL

* Characters:

 - ECL now uses ISO Latin names for the lowest part of the character set.

ECL 9.6:
========

* MOP:

 - CALL-METHOD has only one required argument. Affects only calls to this
   macro inside nonstandard method combinations.

* Visible changes:

 - Physical pathnames do not always have a namestring from which they can be
   reconstructed. This is the case of directory pathnames with version numbers,
   for instance. Formerly ECL would refuse to print those pathnames if
   *PRINT-READABLY* was true, but now it uses instead a #. form.
    > (write (make-pathname :directory '(:relative)
                            :name nil :type nil :version :newest)
             :readably t))
    #.(MAKE-PATHNAME :HOST NIL :DEVICE NIL :DIRECTORY '(:RELATIVE) :NAME NIL
                     :TYPE NIL :VERSION :NEWEST :DEFAULTS NIL)
